--- a/spaceHack/src/app/Meniu.form
+++ b/spaceHack/src/app/Meniu.form
@@ -29,10 +29,10 @@
                   <Component id="jButton1" alignment="2" min="-2" pref="99" max="-2" attributes="0"/>
                   <Component id="jButton2" alignment="2" min="-2" max="-2" attributes="0"/>
                   <Component id="jButton3" alignment="2" min="-2" pref="99" max="-2" attributes="0"/>
-                  <Component id="lbMesaj" alignment="2" min="-2" pref="156" max="-2" attributes="0"/>
+                  <Component id="lbMesaj" alignment="2" min="-2" pref="174" max="-2" attributes="0"/>
                   <Component id="jLabel1" alignment="2" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="133" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -49,7 +49,7 @@
               <Component id="jButton2" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="jButton3" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="138" max="32767" attributes="0"/>
+              <EmptySpace pref="62" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
