--- a/spaceHack/src/app/Meniu.form
+++ b/spaceHack/src/app/Meniu.form
@@ -26,7 +26,7 @@
           <Group type="102" attributes="0">
               <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="2" attributes="0">
-                  <Component id="jButton1" alignment="2" min="-2" pref="99" max="-2" attributes="0"/>
+                  <Component id="btPasi" alignment="2" min="-2" pref="99" max="-2" attributes="0"/>
                   <Component id="jButton2" alignment="2" min="-2" max="-2" attributes="0"/>
                   <Component id="btBanci" alignment="2" min="-2" pref="99" max="-2" attributes="0"/>
                   <Component id="lbMesaj" alignment="2" min="-2" pref="174" max="-2" attributes="0"/>
@@ -44,7 +44,7 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="lbMesaj" min="-2" pref="19" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+              <Component id="btPasi" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="jButton2" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -60,12 +60,12 @@
         <Property name="text" type="java.lang.String" value="MENIU"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton1">
+    <Component class="javax.swing.JButton" name="btPasi">
       <Properties>
         <Property name="text" type="java.lang.String" value="Primii Pasi"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btPasiActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButton2">
