tab Pasi update

--- a/spaceHack/src/app/Login.form
+++ b/spaceHack/src/app/Login.form
@@ -54,7 +54,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="53" max="-2" attributes="0"/>
               <Component id="btAcceptare" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="97" max="32767" attributes="0"/>
+              <EmptySpace pref="113" max="32767" attributes="0"/>
               <Component id="btAnulare" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="54" max="-2" attributes="0"/>
           </Group>
@@ -95,7 +95,7 @@
                   <Component id="btAnulare" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="btAcceptare" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="19" max="32767" attributes="0"/>
+              <EmptySpace pref="45" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -103,7 +103,7 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="INREGISTRARE PERSOANA"/>
+        <Property name="text" type="java.lang.String" value="INREGISTRARE"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
